proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: default
spec:
  selector:
    matchLabels:
      app: proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: ubuntu/squid:latest
        ports:
          - name: web
            containerPort: 3128
        volumeMounts:
            - name: https-cm
              mountPath: /etc/squid/conf.d
              readOnly: true
      volumes:
        - name: https-cm
          configMap:
            name: https-proxy-cm
