proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: default
spec:
  selector:
    app: httpd

  ports:
  - name: web
    port: 80
    targetPort: web
